--- a/About.html
+++ b/About.html
@@ -386,9 +386,9 @@ likelihood and right most word is the least likelihood</p></li>
 </ul>
 <p><strong>Below are the link toward documentations :</strong></p>
 <ol style="list-style-type: decimal">
-<li>Github</li>
-<li>Rpub</li>
-<li>Shiny</li>
+<li>Github,<a href="https://github.com/mrgito/Swiftkey-Capstone-Project" class="uri">https://github.com/mrgito/Swiftkey-Capstone-Project</a></li>
+<li>Rpub, <a href="https://rpubs.com/Masculin/SwiftkeyCapstone" class="uri">https://rpubs.com/Masculin/SwiftkeyCapstone</a></li>
+<li>Shiny, <a href="https://masculin.shinyapps.io/SwiftkeyCapstone" class="uri">https://masculin.shinyapps.io/SwiftkeyCapstone</a></li>
 </ol>
 </div>
 
